<resources>
    <string name="app_name">Assignment-AndroidKickOff</string>
    <string name="user_details">User preference</string>
    <string name="enter_your_name_min_3_characters">Enter your name(Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="choose_a_password_min_4_characters">Choose a password(Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
</resources>