<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_your_name_min_3_characters"
        android:inputType="text|textPersonName"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="100dp"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="phone"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/delivery_address"
        android:inputType="textPostalAddress"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="postalAddress"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/choose_a_password_min_4_characters"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="password"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Register"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textStyle="bold"
        android:textSize="18sp"/>


</LinearLayout>